update app styling using Tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>MyFunFlix</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    />
+    /> -->
+    <link href="/tailwind.css" rel="stylesheet" />
   </head>
   <body>
     <div class="root"></div>
