--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>MyFunFlix</title><link href="/index.a985309e.css" rel="stylesheet"></head><body> <div class="root"></div> <script src="/index.c72fd5bb.js" type="module"></script> </body></html>
+<!DOCTYPE html><html><head><title>MyFunFlix</title><link href="index.a985309e.css" rel="stylesheet"></head><body> <div class="root"></div> <script src="index.c72fd5bb.js" type="module"></script> </body></html>
